# MaLe

./: .gitignore  PVA8.ipynb  pyproject.toml
PVA1/: output-lorenz.vonlanthen-dana.shmaria.csv  pva1-script-lorenz.vonlanthen-dana.shmaria.py
PVA2/: integration.ipynb  lorenz_vonlanthen_dana_shmaria_klassifikator_kreuz_kreis_plus_datensatz.ipynb  price_computation.ipynb
PVA2/data/: output-daniel.zimmermann.csv  output-hans-petzer.eggler.csv  output-joel.boschung.csv  output-jonas.augsburger.csv  output-marco.hirsbrunner.csv  output-nicolasMueller-matthiasFuhrimann-cedricAebi.csv  output-pascal.steiger.csv
PVA4/: Lernkurven_KNN_Arbeitsblatt.ipynb  UCI_train.csv  pva4.md  pva4notebook.ipynb
PVA6/: MaLe_PVA6.ipynb
