[tool.poetry]
name = "male"
version = "0.0.1+local"
description = ""
authors = ["Dana Shmaria"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^19.3"
numpy = "^1.19.4"
sklearn = "^0.0"
jupyterlab = "^2.2.9"
ipykernel = "^5.3.4"
matplotlib = "^3.3.2"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

